new login update

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 </div> -->
                 <h2>Join us <br> Create a CodeCracker account</h2>
                 <div class="credential-info">
-                      <input type="text" class="name" placeholder="Full Name">
+                      <!-- <input type="text" class="name" placeholder="Full Name">
                       <input type="email" class="email" placeholder="Email">
                       <input type="password" class="passward" placeholder="Your password">
                       <button class="Submit">Sign up</button>
@@ -34,7 +34,7 @@
                         <hr>
                         <p>or</p>
                         <hr>
-                    </div>
+                    </div> -->
             
                     <button class="google"><i class="fa-brands fa-google"></i>Continue with Google</button>
                     <button class="github"><i class="fa-brands fa-github"></i>GitHub</button>
