--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="Question_tracker.html">Question Tracker</a></li>
                 <li><a href="#">Event Tracker</a></li>
-                <li><a href="#">Profile Tracker</a></li>
+                <li><a href="ask_codecracker.html" class="ai-link">CodeCracker AI</a></li>
                 <li>
                     <button class="login-btn">
                         <a href="login.html">Login</a>
