--- a/Question_tracker.html
+++ b/Question_tracker.html
@@ -17,12 +17,12 @@
         <nav>
             <ul>
                 <li><a href="Question_tracker.html">Question Tracker</a></li>
-                <li><a href="#">Event Tracker</a></li>
-                <li><a href="#">CodeCracker AI</a></li>
+                <li><a href="eventTracker.html">Event Tracker</a></li>
+                <li><a href="ask_codecracker.html">CodeCracker AI</a></li>
                 <li>
-                    <button class="login-btn">
+                    <!-- <button class="login-btn">
                         <a href="index.html">Login</a>
-                    </button>
+                    </button> -->
                 </li>
             </ul>
         </nav>
@@ -34,9 +34,9 @@
             <h2>My Workspace</h2>
             <ul>
                 <li class="active">📑 Explore Sheets</li>
-                <li>📄 My Sheets</li>
+                <!-- <li>📄 My Sheets</li>
                 <li>📝 Notes</li>
-                <li>📊 Analysis</li>
+                <li>📊 Analysis</li> -->
             </ul>
             <!-- <div class="extension">
                 <p>🟠 Try Codolio Extension</p>
@@ -75,13 +75,15 @@
                     <button>Follow</button>
                     </a>
                 </div>
-                <div class="sheet-card">
-                    <h3>Love Babbar Sheet</h3>
-                    <p>The DSA sheet by Love Babbar is designed to cover almost everything.</p>
+                 <div class="sheet-card">
+                    <a href="/questionSheet/saksham_arora.html">
+                    <h3>Saksham Arora Sheet</h3>
+                    <p>The DSA sheet by Saksham Arora is designed to cover almost everything.</p>
                     <span>Total: 430</span>
                     <button>Follow</button>
+                    </a>
                 </div>
-                <div class="sheet-card">
+                <!-- <div class="sheet-card">
                     <h3>Top Interview 150</h3>
                     <p>The Top 150 sheet, curated by LeetCode, features the most asked interview problems.</p>
                     <span>Total: 150</span>
@@ -92,7 +94,7 @@
                     <p>The Blind 75 sheet includes a curated list of 75 frequent coding questions.</p>
                     <span>Total: 75</span>
                     <button>Follow</button>
-                </div>
+                </div>  -->
                 <!-- <div class="sheet-card">
                     <h3>Neetcode 150</h3>
                     <p>The Neetcode 150 sheet, curated by Navdeep Singh, is a popular coding resource.</p>
@@ -107,7 +109,7 @@
                 </div> -->
             </section>
 
-            <button class="show-more">Show More</button>
+            <!-- <button class="show-more">Show More</button> -->
         </main>
     </div>
 
