--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <nav>
             <ul>
                 <li><a href="Question_tracker.html">Question Tracker</a></li>
-                <li><a href="#">Event Tracker</a></li>
+                <li><a href="eventTracker.html">Event Tracker</a></li>
                 <li><a href="ask_codecracker.html" class="ai-link">CodeCracker AI</a></li>
                 <li>
-                    <button class="login-btn">
+                    <!-- <button class="login-btn">
                         <a href="login.html">Login</a>
-                    </button>
+                    </button> -->
                 </li>
             </ul>
         </nav>
@@ -33,7 +33,7 @@
         <h1>Track, Compete, & Improve.</h1>
         <p>CodeCrack helps you navigate and track your <br> coding journey to success</p>
         <a href="Question_tracker.html" class="cta-button">Question Tracker</a>
-        <a href="#" class="cta-button2">Profile Tracker</a>
+        <a href="/ask_codecracker.html" class="cta-button2">Ask CodeCracker</a>
     </section>
     <!-- Hero Section Ending-->
 
