--- a/questionSheet/saksham_arora.html
+++ b/questionSheet/saksham_arora.html
@@ -54,7 +54,7 @@
                 <div id="content">
                 <h3>Saksham Arora Sheet</h3>
                 <p>Saksham Sheet contains very handily crafted and picked top coding interview questions from different topics of Data Structures & Algorithms. These questions are one of the most asked coding interview questions in coding interviews of companies like Google, Amazon, Microsoft, Facebook, Swiggy, Flipkart, etc, and cover almost all of the concepts related to Data Structure & Algorithms.</p>
-                <button>Follow</button>
+                <!-- <button>Follow</button> -->
                 </div>
                 <div id="questionCount">
                     <div class="statItem">Solved Questions <span id="solved-count">0</span></div>
