--- a/revision.html
+++ b/revision.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Striver SDE Sheet</title>
     <link rel="icon" type="image/png" href="resources/logo.png">
-    <link rel="stylesheet" href="questionSheet.css">
+    <link rel="stylesheet" href="revision.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
             <h2>My Workspace</h2>
             <ul>
                 <!-- <li class="active">📑 Explore Sheets</li> -->
-                <li class="active">📄 My Sheets</li>
+                <li class="active">📄 Revision</li>
                 <!-- <li>📝 Notes</li>
                 <li>📊 Analysis</li> -->
             </ul>
@@ -54,12 +54,11 @@
                 <div id="content">
                 <h3>Revision Sheet</h3>
                 <p>Revision Sheet contains very handily crafted and picked top coding interview questions from different topics of Data Structures & Algorithms. These questions are one of the most asked coding interview questions in coding interviews of companies like Google, Amazon, Microsoft, Facebook, Swiggy, Flipkart, etc, and cover almost all of the concepts related to Data Structure & Algorithms.</p>
-                <button>Follow</button>
                 </div>
                 <div id="questionCount">
                     <div class="statItem">Solved Questions <span id="solved-count">0</span></div>
-                    <div class="statItem">Unsolved Questions <span id="unsolved-count">191</span></div>
-                    <div class="statItem">Total Questions <span id="total-count">191</span></div>
+                    <div class="statItem">Unsolved Questions <span id="unsolved-count">0</span></div>
+                    <div class="statItem">Total Questions <span id="total-count">0</span></div>
                 </div>
             </div>
 
@@ -68,7 +67,7 @@
     </div>
 
 
-    <script src="../js/questionSheets.js"></script>
+    <script src="/revision.js"></script>
 
 
 </body>
